# Interview-Practice

./: .gitignore  README.md
python/chat_fanout_interview/: README.md  pyproject.toml
python/chat_fanout_interview/chat/: __init__.py  clock.py  membership.py  models.py  room.py  server.py  transport.py
python/chat_fanout_interview/tests/: test_non_blocking_broadcast.py  test_ordering_per_user.py  test_per_user_buffer_drop_policy.py  test_transport_abstraction.py
python/crawler_interview/: README.md  pyproject.toml
python/crawler_interview/crawler/: __init__.py  clock.py  fetch.py  parse.py  pipeline.py  politeness.py  storage.py
python/crawler_interview/tests/: test_bounded_backpressure.py  test_concurrent_pipeline.py  test_no_duplicates_streaming.py  test_parser_plugins.py
python/notif_interview/: README.md  pyproject.toml
python/notif_interview/notif/: models.py  queueing.py  rate_limit.py  retry.py  sender.py  service.py
python/notif_interview/tests/: conftest.py  test_concurrency_and_shutdown.py  test_oop_extensibility.py  test_rate_limit.py  test_retry_and_dedup.py
python/order_processing_interview/: README.md  pyproject.toml
python/order_processing_interview/orders/: __init__.py  clock.py  gateway.py  idempotency.py  inventory.py  models.py  queueing.py  service.py  worker.py
python/order_processing_interview/tests/: test_background_processing.py  test_idempotency_no_double_charge.py  test_oop_strategies.py  test_retries_and_dlq.py
