[build-system]
requires = ['setuptools>=45', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'notif_interview'
version = '0.1.0'
description = 'Notification service interview practice'
requires-python = '>=3.11'
dependencies = []

[project.optional-dependencies]
dev = ['pytest>=7.0']

[tool.pytest.ini_options]
testpaths = ['tests']
python_files = ['test_*.py']
python_classes = ['Test*']
python_functions = ['test_*']
addopts = '-v'
